# oqs-safe-0

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  build.rs
.github/workflows/: ci.yml  release.yml
examples/: hkdf_handshake.rs
misra-ci/: Cargo.toml  README.md
misra-ci/crates/misra_cli/: Cargo.toml
misra-ci/crates/misra_cli/src/: main.rs
misra-ci/examples/c_project/: bad.c
misra-ci/rulesets/: misra-c-2012.yaml
oqs-safe-0/: Cargo.toml  LICENSE-MIT  README.md
oqs-safe-0/.github/workflows/: ci.yml
oqs-safe-0/src/: lib.rs
oqs-safe-0/tests/: basic.rs
src/: error.rs  ffi.rs  kem.rs  lib.rs  selftest.rs  sig.rs
tests/: basic.rs
