[package]
name = "oqs-safe"
version = "0.2.4"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Orlando Trajano <orlychikka@gmail.com>"]
repository = "https://github.com/0rlych1kk4/oqs-safe"
documentation = "https://docs.rs/oqs-safe"
readme = "README.md"
categories = ["cryptography", "api-bindings", "external-ffi-bindings"]
keywords = ["post-quantum", "pqc", "kyber", "dilithium", "liboqs"]
description = "Stable, minimal, safe Rust wrapper over libOQS for PQ KEM/SIG (ML-KEM/Dilithium) with explicit mock-only dev mode."
# Helps cargo coordinate native linking
links = "oqs"
exclude = [
    "target/*",
    "liboqs/*",
    "tests/*",
    "examples/*",
    ".github/*",
    "*.dSYM",
    "*.DS_Store",
    "*.zip",
    "*.tar*",
    "*.gz",
    "*.pdf",
    "*.png",
    "*.jpg",
    "*.jpeg",
]

[badges]
crates-io = { repository = "https://crates.io/crates/oqs-safe" }
github = { repository = "https://github.com/0rlych1kk4/oqs-safe-0", branch = "main" }
docsrs = {}

[package.metadata.msrv]
rust = "1.70"

[dependencies]
zeroize = { version = "1", features = ["derive"] }
rand_core = { version = "0.6", features = ["getrandom"] }
getrandom = "0.2"
subtle = "2"
serde = { version = "1", features = ["derive"], optional = true }
ctor = { version = "0.2", optional = true }

[features]
# Backends (choose one explicitly)
default = ["mock"]
testing = []
liboqs = []
mock = []

# Algorithms (API gating only)
kyber768 = []
kyber1024 = []
dilithium2 = []
dilithium3 = []
dilithium5 = []
ml_kem_768 = ["kyber768"]
ml_dsa_44  = ["dilithium2"]

# Safety / DX
strict = []               # enable extra lints in release builds
selftest_at_startup = ["ctor"]  # run a small self-test on library load

[build-dependencies]
pkg-config = "0.3"
cc = "1"

[dev-dependencies]
hex = "0.4"
rand = "0.8"
hkdf = "0.12"
sha2 = "0.10"

[package.metadata.docs.rs]
features = ["kyber768", "dilithium2", "mock"]
rustdoc-args = ["--cfg", "docsrs"]
no-default-features = true
