[package]
name = "misra_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
walkdir = "2"
regex = "1"
junit-report = "0.8.3"
time = { version = "0.3", features = ["formatting"] }
